<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_on_boarding_scene"
    tools:context=".ui.OnBoardingActivity">

    <ImageView
    android:id="@+id/headerGetStarted"
    android:layout_width="150dp"
    android:layout_height="50dp"
    android:alpha="0"
    android:src="@drawable/bg_getstarted"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/onStartLogo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="@id/headerGetStarted"
        app:layout_constraintEnd_toEndOf="@id/headerGetStarted"
        app:layout_constraintStart_toStartOf="@id/headerGetStarted"
        app:layout_constraintTop_toBottomOf="@+id/headerGetStarted" />

    <TextView
        android:id="@+id/textStarted"
        style="@style/Medium40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:alpha="0"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="@+id/onStartLogo"
        app:layout_constraintStart_toStartOf="@+id/onStartLogo"
        app:layout_constraintTop_toBottomOf="@+id/onStartLogo" />

    <ImageView
        android:id="@+id/logoMenu1"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:src="@drawable/welcome1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/titleMenu1"
        style="@style/SemiBold18sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/title_menu_1"
        app:layout_constraintEnd_toEndOf="@+id/logoMenu1"
        app:layout_constraintStart_toStartOf="@+id/logoMenu1"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu1" />

    <TextView
        android:id="@+id/descMenu1"
        style="@style/Regular16sp"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/desc_menu_1"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu1" />

    <ImageView
        android:id="@+id/logoMenu2"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/welcome2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        tools:layout_editor_absoluteX="411dp" />

    <TextView
        android:id="@+id/titleMenu2"
        style="@style/SemiBold18sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/title_menu_2"
        app:layout_constraintEnd_toEndOf="@+id/logoMenu2"
        app:layout_constraintStart_toStartOf="@+id/logoMenu2"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu2" />

    <TextView
        android:id="@+id/descMenu2"
        style="@style/Regular16sp"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/desc_menu_2"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu2" />

    <ImageView
        android:id="@+id/logoMenu3"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/welcome3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        tools:layout_editor_absoluteX="411dp" />

    <TextView
        android:id="@+id/titleMenu3"
        style="@style/SemiBold18sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/title_menu_3"
        app:layout_constraintEnd_toEndOf="@+id/logoMenu3"
        app:layout_constraintStart_toStartOf="@+id/logoMenu3"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu3" />

    <TextView
        android:id="@+id/descMenu3"
        style="@style/Regular16sp"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/desc_menu_3"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu3" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="15dp"
        app:altSrc="@drawable/baseline_circle_24_full"
        app:layout_constraintBottom_toBottomOf="@+id/menu2"
        app:layout_constraintEnd_toStartOf="@+id/menu2"
        app:layout_constraintTop_toTopOf="@+id/menu2"
        app:srcCompat="@drawable/baseline_circle_24_trans" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:altSrc="@drawable/baseline_circle_24_full"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:srcCompat="@drawable/baseline_circle_24_trans" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        app:altSrc="@drawable/baseline_circle_24_full"
        app:layout_constraintBottom_toBottomOf="@+id/menu2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menu2"
        app:layout_constraintTop_toTopOf="@+id/menu2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/baseline_circle_24_trans" />

    <Button
        style="@style/RegularWhite16sp"
        android:id="@+id/button_started"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginBottom="250dp"
        android:textAllCaps="false"
        android:visibility="gone"
        android:drawableEnd="@drawable/next"
        android:alpha="0"
        android:backgroundTint="@color/primer"
        android:text="@string/get_started"
        app:layout_constraintBottom_toTopOf="@+id/menu2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/logo_app"
        android:layout_width="150dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logotextonly" />
</androidx.constraintlayout.motion.widget.MotionLayout>